--- a/views/Residentialdesigning.ejs
+++ b/views/Residentialdesigning.ejs
@@ -26,13 +26,12 @@
         <a href="javascript:void(0);" class="icon" onclick="myFunction()">
               <i class="fa fa-bars"></i>
         </a>
-        <a href="index.html">Home</a>
-        <a href="services.html">Service</a>
-        <a href="Ourworks.html">Our Works</a>
-        
-        <a href="About us.html">About Us</a>
-        <a href="Contactus.html">Contact Us</a>
-             
+        <a href="/">Home</a>
+          <a href="/services">Service</a>
+          <a href="/Ourworks">Our Works</a>
+          
+          <a href="/About">About Us</a>
+          <a href="/Contactus">Contact Us</a>
       </div>
     </div> 
   </div>
