--- a/views/home.ejs
+++ b/views/home.ejs
@@ -42,12 +42,12 @@
                 <a href="javascript:void(0);" class="icon" onclick="myFunction()">
                       <i class="fa fa-bars"></i>
                 </a>
-                <a href="index.html">Home</a>
-                <a href="services.html">Service</a>
-                <a href="Ourworks.html">Our Works</a>
+                <a href="/">Home</a>
+                <a href="/services">Service</a>
+                <a href="/Ourworks">Our Works</a>
                 
-                <a href="About us.html">About Us</a>
-                <a href="Contactus.html">Contact Us</a>
+                <a href="/About">About Us</a>
+                <a href="/Contactus">Contact Us</a>
                      
               </div>
             </div> 
@@ -150,19 +150,19 @@
               <h3>Quick Links</h3>
               <div class="border1"></div> <!--for the underline -->
                 <ul>
-                  <a href="index.html"><li>Home</li></a>
-                  <a href="services.html"><li>Service</li></a>
-                  <a href="Ourworks.html"><li>Our Works</li></a>
-                </ul>
-            </div>
-        
-        <!--  for some other links -->
-            <div class="footer-items">
-              <h3>Details</h3>
+                  <a href="/"><li>Home</li></a>
+              <a href="/services"><li>Service</li></a>
+              <a href="/Ourworks"><li>Our Works</li></a>
+            </ul>
+          </div>
+      
+      <!--  for some other links -->
+          <div class="footer-items">
+            <h6>Details</h6>
               <div class="border1"></div>  <!--for the underline -->
                 <ul>
-                  <a href="Contactus.html"><li>Contact Us</li></a>
-                  <a href="About us.html"><li>About</li></a>
+                  <a href="Contactus"><li>Contact Us</li></a>
+                  <a href="/About"><li>About</li></a>
                 </ul>
             </div>
         
