--- a/views/services.ejs
+++ b/views/services.ejs
@@ -30,12 +30,12 @@
                 <i class="fa fa-bars"></i>
           </a>
           
-          <a href="index.html">Home</a>
-          <a href="services.html">Service</a>
-          <a href="Ourworks.html">Our Works</a>
+          <a href="/">Home</a>
+          <a href="/services">Service</a>
+          <a href="/Ourworks">Our Works</a>
           
-          <a href="About us.html">About Us</a>
-          <a href="Contactus.html">Contact Us</a>
+          <a href="/About">About Us</a>
+          <a href="/Contactus">Contact Us</a>
                
         </div>
       </div> 
@@ -48,11 +48,11 @@
       <h2>Our Services</h2>
 
       <div class="clearfix">
-        <a href="Residential designing.html">
+        <a href="/Residentialdesigning">
           <img class="img2" src="https://png.pngitem.com/pimgs/s/8-86176_gold-mood-board-from-sea-interior-design-mood.png" alt="Pineapple" width="170" height="170">
         </a>
         <h3>
-          <p><b><a href="Residential designing.html" target="_blank">Residential Designing</a></b></p>
+          <p><b><a href="/Residentialdesigning" target="_blank">Residential Designing</a></b></p>
         </h3>
         <p>Your home reflects your true personality and lifestyle. Home is the only place where you can embrace yourself and have downtime.
            So hiring experienced Interior Designers will help not only plan out your concept but also makes your dream reality. 
@@ -63,11 +63,11 @@
       <br>
       <div class="clearfix">
 
-        <a href="Office.html">
+        <a href="/Office">
           <img class="img2" src="https://cdn.wallpaper.com/main/2020/04/interior_landscape_image.gif" alt="Pineapple" width="170" height="170">
         </a>
         <h3>
-          <a href="Office.html">Office Designing</a>
+          <a href="/Office">Office Designing</a>
         </h3>
         <p>Interior Designing has become so much important in all the sectors  be it your home or your working place.  
           It is highly in demand in the corporate world nowadays for both employees as well as customers. People are spending more 
@@ -77,11 +77,11 @@
       </div>
       <br>
       <div class="clearfix">
-        <a href="Homedecor.html">
+        <a href="/Homedecor">
           <img class="img2" src="https://santaluminteriors.com/image/front/about11.gif" alt="Pineapple" width="170" height="170">
         </a>
         <h3>
-          <a href="Homedecor.html">Home Decor </a>
+          <a href="/Homedecor">Home Decor </a>
         </h3>
         <p>The decoration and look plays the vital role in reflecting the moods of a place. 
           A good looking house is good for getting rid of bad moods and stress. It reflects the personality of who you are. 
@@ -92,11 +92,11 @@
       </div>
       <br>
       <div class="clearfix">
-        <a href="Homerenovation.html">
+        <a href="/Homerenovation">
           <img class="img2" src="https://lh3.googleusercontent.com/proxy/4KHodPLtbxj3qulRRNrD3I29qFRx5vzjD2USxyW7YHFwd-qGku3VpKw9W6f8gsxMyR2ON6suwk2zwivYNfLZ5vcxIYdrEd-TRxtJDHX4XsGtcOMY2KJs9ug7dFCibI983R_f" alt="Pineapple" width="170" height="170">
         </a>
         <h3>
-          <a href="Homerenovation.html">Home Renovation </a>
+          <a href="/Homerenovation">Home Renovation </a>
         </h3>
         <p>After living so many years at your home there is no way the things will remain the same, it is most likely that some parts are
            broken and need renovation. Renovation includes improving, decorating, extending and redesigning your home and making it more lovely 
@@ -106,11 +106,11 @@
       </div>
       <br>
       <div class="clearfix">
-        <a href="commercial.html">
+        <a href="/commercial">
           <img class="img2" src="https://www.lushome.com/wp-content/uploads/2013/10/corner-home-office-designs-furniture-placement-6.jpg" alt="Pineapple" width="170" height="170">
         </a>
         <h3>
-          <a href="commercial.html">Commercial Designing</a>
+          <a href="/commercial">Commercial Designing</a>
         </h3> 
         <p>Gone are the days when houses had concrete slab or solid wooden ceiling. Today the false ceiling has become the prominent symbol 
           of the modern world. It’s not only the part of decoration but it serves various other functions. It modifies the overall look of your ceiling.
@@ -134,8 +134,8 @@
             <h3>Quick Links</h3>
             <div class="border1"></div> <!--for the underline -->
               <ul>
-                <a href="index.html"><li>Home</li></a>
-                <a href="services.html"><li>Service</li></a>
+                <a href="/"><li>Home</li></a>
+                <a href="/services"><li>Service</li></a>
                 <a href="Ourworks.html"><li>Our Works</li></a>
               </ul>
           </div>
@@ -145,8 +145,8 @@
             <h3>Details</h3>
               <div class="border1"></div>  <!--for the underline -->
                 <ul>
-                  <a href="Contactus.html"><li>Contact Us</li></a>
-                  <a href="About us.html"><li>About</li></a>
+                  <a href="/Contactus"><li>Contact Us</li></a>
+                  <a href="/About"><li>About</li></a>
                 </ul>
           </div>
       
