script tag added

--- a/views/Contactus.ejs
+++ b/views/Contactus.ejs
@@ -12,6 +12,7 @@
 <link href="https://fonts.googleapis.com/css2?family=Quicksand:wght@500&display=swap" rel="stylesheet">
 <link rel="preconnect" href="https://fonts.gstatic.com">
 <link href="https://fonts.googleapis.com/css2?family=Merienda&display=swap" rel="stylesheet">
+
     <title>Document</title>
 </head>
 <body>
@@ -165,5 +166,5 @@
 </body>
 
 
-<script src="home.js"></script>
+<script src="js/home.js"></script>
 </html>
