--- a/views/About.ejs
+++ b/views/About.ejs
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" type="text/css" href="css/aboutus.css">
     <link rel="preconnect" href="https://fonts.gstatic.com">
+    
 <link href="https://fonts.googleapis.com/css2?family=Akaya+Telivigala&display=swap" rel="stylesheet">
 <link rel="preconnect" href="https://fonts.gstatic.com">
 <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;500;700&display=swap" rel="stylesheet">
@@ -122,5 +123,5 @@
       </div>
 </body>
 
-<script src="home.js"></script>
+<script src="js/home.js"></script>
 </html>
