--- a/views/Residentialdesigning.ejs
+++ b/views/Residentialdesigning.ejs
@@ -7,6 +7,7 @@
     <link rel="stylesheet" type="text/css" href="css/Residential Designing.css">
     <link rel="preconnect" href="https://fonts.gstatic.com">
 <link href="https://fonts.googleapis.com/css2?family=Merienda&display=swap" rel="stylesheet">
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <title>Document</title>
 </head>
 <body>
@@ -177,6 +178,7 @@
       © 2021 Designed & Developed by <a href="https://www.bluewebsurfer.com">Blueweb Surfer</a> . All rights reserved.
     </div>
   </div>
+  <script src="js/home.js"></script>
 
 </body>
 </html>
